# firestarr-cpp

./: .bash_aliases  .clang-format  .clang-tidy  .clangd  .dockerignore  .env  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COPYRIGHT  ORIGIN.md  README.adoc  README.md  READMEadoc  REFERENCES.md  REUSE.toml  bench.sh  build_all_platforms.sh  chk_build.sh  chk_marked_bad.sh  chk_namespace.sh  count_lines.sh  do_bench.sh  do_benchmark.sh  do_fix.sh  docker-compose.yml  fcc.sh  find_bad.sh  find_bad_10N_50651.sh  find_change_count.sh  find_prev.sh  firestarr.sln  fix_data.sh  fix_ns.sh  fix_sub.sh  fix_tidy.sh  fix_ws.sh  fmt.sh  fuel.lut  (+15 more)
.docker/: Dockerfile  Dockerfile.dev  Dockerfile.from_binary
.github/: cmake-problem-matcher.json
.github/ISSUE_TEMPLATE/: Bug_Report.yml  Feature_Request.yml
.github/workflows/: build-containers.yml  build-docker-image.yml  build-docker-minimal.yml  build-docker-vcpkg-installed.yml  build-docker.yml  build-docs.yml  cmake-test-all.yaml  cmake-test-all.yml  cmake-test-on.yml  cmake-test.yml  docker-cleanup.yml  package-binary.yml
cmake/: ASAN.cmake  CompilerWarnings.cmake  TidyFormat.cmake  TuneArchCPU.cmake  Version.cmake
docs/: index.adoc  license.adoc  settings.adoc  usage.adoc
docs/arguments/: apcp_prev.adoc  ascii.adoc  confidence.adoc  curing.adoc  dc.adoc  deterministic.adoc  dmc.adoc  ffmc.adoc  fuel_lut.adoc  greenup.adoc  h.adoc  i.adoc  no_intensity.adoc  no_probability.adoc  no_tiff.adoc  occurrence.adoc  output_date_offset.adoc  perimeter.adoc  points.adoc  q.adoc  raster_root.adoc  s.adoc  sim_area.adoc  simulation.adoc  size.adoc  tz.adoc  usage.adoc  v.adoc  wx.adoc
repo/: build_all_platforms.sh  changes_until.sh  chk_bad.sh  chk_build.sh  chk_marked_bad.sh  chk_tbd.sh  clean_ghcr.sh  cmp_gdal.sh  cmp_pts.sh  do_fix.sh  do_profile.sh  fcc.sh  find_before.sh  find_changes.sh  find_shortest.sh  find_warnings.sh  fix_ns.sh  fix_sub.sh  init_data.sh  init_nocheck.sh  install_gcc13.sh  mark_todo.sh  prof_cpu.sh  prof_heap.sh  ramfs.sh  rebase.sh  repeat_not.sh  run_arch.sh  setup_vcpkg.sh  show_latest.sh  show_tags.sh  test_cloc.sh  test_gh_actions.sh  test_salt.sh  to_prev.sh
scripts/: build.ps1  build.sh  mk_clean.sh  mk_verbose.sh  profile.sh
src/cpp/: BurnedData.cpp  BurnedData.h  Cell.h  CellPoints.cpp  CellPoints.h  ConstantGrid.h  ConstantWeather.h  ConvexHull.cpp  ConvexHull.h  Duff.cpp  Duff.h  DuffSimple.cpp  DuffSimple.h  Environment.cpp  Environment.h  EnvironmentInfo.cpp  EnvironmentInfo.h  Event.cpp  Event.h  EventCompare.h  FBP45.cpp  FBP45.h  FWI.cpp  FWI.h  FireSpread.cpp  FireSpread.h  FireWeather.cpp  FireWeather.h  FireWeatherDaily.cpp  FireWeatherDaily.h  FuelLookup.cpp  FuelLookup.h  FuelType.cpp  FuelType.h  FwiReference.cpp  FwiReference.h  FwiStream.cpp  FwiStream.h  Grid.cpp  Grid.h  (+81 more)
src/cpp/fs/: ArgumentParser.cpp  ArgumentParser.h  BurnedData.cpp  BurnedData.h  CMakeLists.txt  Cell.h  CellPoints.cpp  CellPoints.h  ConstantGrid.cpp  ConstantGrid.h  ConvexHull.cpp  ConvexHull.h  Duff.cpp  Duff.h  DuffSimple.cpp  DuffSimple.h  Environment.cpp  Environment.h  EnvironmentInfo.cpp  EnvironmentInfo.h  Event.cpp  Event.h  EventCompare.h  FBP45.cpp  FBP45.h  FWI.cpp  FWI.h  FireSpread.cpp  FireSpread.h  FireWeather.cpp  FireWeather.h  FuelLookup.cpp  FuelLookup.h  FuelType.cpp  FuelType.h  FwiReference.c  FwiReference.cpp  FwiReference.h  Grid.cpp  Grid.h  (+81 more)
test/: 10N_50651.ps1  10N_50651.sh  bad_projection.sh  benchmark.sh  both_all.sh  both_one.sh  constant.sh  constant_all.sh  constant_one.sh  do_profile.sh  hourly.sh  offset.sh  perim.sh  slow.sh  surface.sh  test_10N_50651.sh
test/10N_50651/: 10N_50651.gpkg  10N_50651.tfw  firestarr_10N_50651.geojson  firestarr_10N_50651_wx_streams.geojson  p.sh  sim.sh
test/10N_50651.orig/: probability_155_2024-06-03.tif  probability_156_2024-06-04.tif  probability_157_2024-06-05.tif  probability_158_2024-06-06.tif  probability_159_2024-06-07.tif  probability_160_2024-06-08.tif  probability_161_2024-06-09.tif  probability_162_2024-06-10.tif  probability_163_2024-06-11.tif  probability_164_2024-06-12.tif  probability_165_2024-06-13.tif  probability_166_2024-06-14.tif  probability_167_2024-06-15.tif  probability_168_2024-06-16.tif  sizes_155_2024-06-03.csv  sizes_156_2024-06-04.csv  sizes_157_2024-06-05.csv  sizes_158_2024-06-06.csv  sizes_159_2024-06-07.csv  sizes_160_2024-06-08.csv  sizes_161_2024-06-09.csv  sizes_162_2024-06-10.csv  sizes_163_2024-06-11.csv  sizes_164_2024-06-12.csv  sizes_165_2024-06-13.csv  sizes_166_2024-06-14.csv  sizes_167_2024-06-15.csv  sizes_168_2024-06-16.csv
test/data/10N_50651/: probability_157_2024-06-05.tif  probability_160_2024-06-08.tif  probability_162_2024-06-10.tif  probability_163_2024-06-11.tif  probability_164_2024-06-12.tif  probability_168_2024-06-16.tif  sizes_155_2024-06-03.csv  sizes_158_2024-06-06.csv  sizes_161_2024-06-09.csv  sizes_162_2024-06-10.csv  sizes_167_2024-06-15.csv
test/data/fwi/: fwi_in.txt  fwi_out.txt
test/input/: fwi.txt  fwi_wx.txt
test/input/10N_50651/: firestarr_10N_50651_wx.csv  horizontal_adjustment.csv
test/input/bad_projection/: perim.tif  wx.csv
test/input/hourly/: wx_daily_in.csv
test/input/offset/: perimeter.tif  weather.csv
test/output/10N_50651/: intensity_H_155_2024-06-03.tif  intensity_H_156_2024-06-04.tif  intensity_H_157_2024-06-05.tif  intensity_H_158_2024-06-06.tif  intensity_H_159_2024-06-07.tif  intensity_L_155_2024-06-03.tif  intensity_L_156_2024-06-04.tif  intensity_L_157_2024-06-05.tif  intensity_L_158_2024-06-06.tif  intensity_L_159_2024-06-07.tif  intensity_M_155_2024-06-03.tif  intensity_M_156_2024-06-04.tif  intensity_M_157_2024-06-05.tif  intensity_M_158_2024-06-06.tif  intensity_M_159_2024-06-07.tif  probability_155_2024-06-03.tif  probability_156_2024-06-04.tif  probability_157_2024-06-05.tif  probability_158_2024-06-06.tif  probability_159_2024-06-07.tif  settings.ini  sizes_155_2024-06-03.csv  sizes_156_2024-06-04.csv  sizes_157_2024-06-05.csv  sizes_158_2024-06-06.csv  sizes_159_2024-06-07.csv
(+413672 files in other folders)
